feat: step0 기본코드 준비완료 (#115)