@@ -2,6 +2,7 @@ package jdbc;
 
 import java.sql.Connection;
 import java.sql.ResultSet;
+import java.sql.SQLException;
 import java.sql.Statement;
 import java.util.ArrayList;
 import java.util.List;
@@ -26,7 +27,7 @@ public class JdbcTemplate {
         if (results.size() != 1) {
             throw new RuntimeException("Expected 1 result, got " + results.size());
         }
-        return results.get(0);
+        return results.getFirst();
     }
 
     public <T> List<T> query(final String sql, final RowMapper<T> rowMapper) {
@@ -37,6 +38,18 @@ public class JdbcTemplate {
             }
             return result;
         } catch (Exception e) {
+            throw new RuntimeException(e);
+        }
+    }
+
+    public Long executeInsert(final String sql) {
+        try (final Statement statement = connection.createStatement()) {
+            statement.execute(sql, Statement.RETURN_GENERATED_KEYS);
+            try (final ResultSet resultSet = statement.getGeneratedKeys()) {
+                resultSet.next();
+                return resultSet.getLong(1);
+            }
+        } catch (SQLException e) {
             throw new RuntimeException(e);
         }
     }
